--- a/css/responsive.css
+++ b/css/responsive.css
@@ -141,6 +141,7 @@
     font-weight: 600;
     line-height: 60px;
     margin-bottom: 20px;
+    text-align: right;
   }
 
   #testimonial .testimonial-area {
@@ -166,6 +167,7 @@
   .hero-area .contents h2 {
     color: #fff;
     font-size: 40px !important;
+    text-align: right;
   }
 
   .navbar-expand-md .navbar-nav .nav-link {
@@ -317,13 +319,16 @@
   }
 
   .hero-area .contents h2 {
-    font-size: 20px;
+    font-size: 30px;
     line-height: 35px;
-    margin-bottom: 10px;
+    margin-bottom: -40px;
+    direction: unset;
+    text-align: right;
+    margin-top: 30px;
   }
 
   .hero-area .contents {
-    padding: 200px 0 50px;
+    padding: 200px 0 0px;
   }
 
   .hero-area .contents p {
