--- a/css/responsive.css
+++ b/css/responsive.css
@@ -627,9 +627,9 @@
     margin-top: 15px;
   }
 
-  .back-to-top {
+/*   .back-to-top {
     display: none !important;
-  }
+  } */
 }
 
 @media (min-width: 375px) and (max-width: 667px) {
